--- a/config/docker/compose/mysql.yml
+++ b/config/docker/compose/mysql.yml
@@ -13,20 +13,21 @@
 # "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 # KIND, either express or implied. See the License for the
 # specific language governing permissions and limitations
-# under the License.
-#
-
 version: "3.8"
 
 services:
-  fineract:
-    # user: "${FINERACT_USER}:${FINERACT_GROUP}"
-    image: almbolonzi/ekesha-fineract:latest
+  mariadb:
+    container_name: mysqldb
+    image: mysql:9.0
     volumes:
-      - ${PWD}/config/docker/logback/logback-override.xml:/app/logback-override.xml
-      - ${PWD}/config/docker/aws/etc/credentials:/etc/aws/credentials:ro
-      - ${PWD}/build/fineract/logs:/var/logs/fineract:rw
+      - ${PWD}/config/docker/mysql/conf.d/server_collation.cnf:/etc/mysql/conf.d/server_collation.cnf:ro
+      - ${PWD}/config/docker/mysql/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d:Z,ro
+    restart: always
+    env_file:
+      - ${PWD}/config/docker/env/mysql.env
     healthcheck:
-      test: ["CMD", 'sh', '-c', 'echo -e "Checking for the availability of Fineract server deployment"; while ! nc -z "localhost" 8443; do sleep 1; printf "-"; done; echo -e " >> Fineract server has started";' ]
-      timeout: 1s
-      retries: 60
+      test: [ "CMD", "healthcheck.sh", "--su-mysql", "--connect", "--innodb_initialized" ]
+      timeout: 10s
+      retries: 10
+    ports:
+      - "3306:3306"
