--- a/config/docker/env/fineract-mysqldb.env
+++ b/config/docker/env/fineract-mysqldb.env
@@ -1,3 +1,4 @@
+#
 # Licensed to the Apache Software Foundation (ASF) under one
 # or more contributor license agreements. See the NOTICE file
 # distributed with this work for additional information
@@ -16,17 +17,9 @@
 # under the License.
 #
 
-version: "3.8"
-
-services:
-  fineract:
-    # user: "${FINERACT_USER}:${FINERACT_GROUP}"
-    image: almbolonzi/ekesha-fineract:latest
-    volumes:
-      - ${PWD}/config/docker/logback/logback-override.xml:/app/logback-override.xml
-      - ${PWD}/config/docker/aws/etc/credentials:/etc/aws/credentials:ro
-      - ${PWD}/build/fineract/logs:/var/logs/fineract:rw
-    healthcheck:
-      test: ["CMD", 'sh', '-c', 'echo -e "Checking for the availability of Fineract server deployment"; while ! nc -z "localhost" 8443; do sleep 1; printf "-"; done; echo -e " >> Fineract server has started";' ]
-      timeout: 1s
-      retries: 60
+# NOTE: env vars prefixed "FINERACT_HIKARI_*" are used to configure the database connection pool
+FINERACT_HIKARI_DRIVER_SOURCE_CLASS_NAME=com.mysql.cj.jdbc.Driver
+FINERACT_HIKARI_JDBC_URL=jdbc:mysql://db:3306/fineract_tenants
+# NOTE: env vars prefixed "FINERACT_DEFAULT_TENANTDB_*" are used to create the default tenant database
+FINERACT_DEFAULT_TENANTDB_PORT=3306
+FINERACT_DEFAULT_TENANTDB_UID=root
