--- a/fineract-provider/src/main/resources/application.properties
+++ b/fineract-provider/src/main/resources/application.properties
@@ -30,7 +30,7 @@ fineract.tenant.port=${FINERACT_DEFAULT_TENANTDB_PORT:3306}
 fineract.tenant.username=${FINERACT_DEFAULT_TENANTDB_UID:root}
 fineract.tenant.password=${FINERACT_DEFAULT_TENANTDB_PWD:mysql}
 fineract.tenant.parameters=${FINERACT_DEFAULT_TENANTDB_CONN_PARAMS:}
-fineract.tenant.timezone=${FINERACT_DEFAULT_TENANTDB_TIMEZONE:Asia/Kolkata}
+fineract.tenant.timezone=${FINERACT_DEFAULT_TENANTDB_TIMEZONE:Africa/Nairobi}
 fineract.tenant.identifier=${FINERACT_DEFAULT_TENANTDB_IDENTIFIER:default}
 fineract.tenant.name=${FINERACT_DEFAULT_TENANTDB_NAME:fineract_default}
 fineract.tenant.description=${FINERACT_DEFAULT_TENANTDB_DESCRIPTION:Default Demo Tenant}
@@ -328,11 +328,11 @@ spring.cloud.aws.credentials.profile.path=${FINERACT_AWS_CREDENTIALS_PROFILE_PAT
 
 # FINERACT-914
 server.forward-headers-strategy=framework
-server.port=${FINERACT_SERVER_PORT:8443}
+server.port=${FINERACT_SERVER_PORT:8080}
 server.servlet.context-path=${FINERACT_SERVER_SERVLET_CONTEXT_PATH:/fineract-provider}
 server.compression.enabled=${FINERACT_SERVER_COMPRESSION_ENABLED:true}
 
-server.ssl.enabled=${FINERACT_SERVER_SSL_ENABLED:true}
+server.ssl.enabled=${FINERACT_SERVER_SSL_ENABLED:false}
 server.ssl.protocol=TLS
 #server.ssl.ciphers=${FINERACT_SERVER_SSL_CIPHERS:TLS_RSA_WITH_AES_128_CBC_SHA256}
 #server.ssl.enabled-protocols=${FINERACT_SERVER_SSL_PROTOCOLS:TLSv1.2}
@@ -354,8 +354,8 @@ server.tomcat.threads.min-spare=${FINERACT_SERVER_TOMCAT_THREADS_MIN_SPARE:10}
 # OAuth authorisation server endpoint
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${FINERACT_SERVER_OAUTH_RESOURCE_URL:http://localhost:9000/auth/realms/fineract}
 
-spring.datasource.hikari.driverClassName=${FINERACT_HIKARI_DRIVER_SOURCE_CLASS_NAME:org.mariadb.jdbc.Driver}
-spring.datasource.hikari.jdbcUrl=${FINERACT_HIKARI_JDBC_URL:jdbc:mariadb://localhost:3306/fineract_tenants}
+spring.datasource.hikari.driverClassName=${FINERACT_HIKARI_DRIVER_SOURCE_CLASS_NAME:com.mysql.cj.jdbc.Driver}
+spring.datasource.hikari.jdbcUrl=${FINERACT_HIKARI_JDBC_URL:jdbc:mysql://localhost:3306/fineract_tenants}
 spring.datasource.hikari.username=${FINERACT_HIKARI_USERNAME:root}
 spring.datasource.hikari.password=${FINERACT_HIKARI_PASSWORD:mysql}
 spring.datasource.hikari.minimumIdle=${FINERACT_HIKARI_MINIMUM_IDLE:3}
