--- a/fineract-provider/build.gradle
+++ b/fineract-provider/build.gradle
@@ -329,13 +329,19 @@ task dockerPush {
 
         // Push the versioned tag
         exec {
-            commandLine 'docker', 'push', "almbolonzi/ekesha-fineract:${versionTag}"
+            commandLine 'docker', 'push', "almbolonzi/ekesha-fineract:${System.getenv('GITHUB_SHA')}.toString()"
         }
 
         // Push as the latest tag
         exec {
             commandLine 'docker', 'push', "almbolonzi/ekesha-fineract:latest"
         }
+        
+        environment = [
+           'GITHUB_SHA' : "${System.getenv('GITHUB_SHA')}".toString(),
+           'GITHUB_REF' : "${System.getenv('GITHUB_REF')}".toString()
+//         'GAR_LOCATION' : "${System.getenv('GAR_LOCATION')}".toString()
+        ]
     }
 }
 
