--- a/.github/workflows/deploy_google.yml
+++ b/.github/workflows/deploy_google.yml
@@ -45,7 +45,7 @@ env:
   DEPLOYMENT_NAME: 'Ekesha-dev'
   REPOSITORY: 'mali-fineract-ce3137c9'
   IMAGE: 'ekesha-fineract'
-  WORKLOAD_IDENTITY_PROVIDER: 'projects/mali-434814/locations/global/workloadIdentityPools/ekesha-pool-test/providers/ekesha-provider' # TODO: update to your workload identity provider
+  WORKLOAD_IDENTITY_PROVIDER: 'https://iam.googleapis.com/projects/355572689676/locations/global/workloadIdentityPools/ekesha-pool-test/providers/ekesha-provider' # TODO: update to your workload identity provider
   NAMESPACE: 'paymenthub-back-end-ce3137c9'
   
 jobs:
