--- a/fineract-provider/build.gradle
+++ b/fineract-provider/build.gradle
@@ -265,7 +265,8 @@ jib {
     }
     
     to {
-        image = 'almbolonzi/ekesha-fineract'
+        //image = 'almbolonzi/ekesha-fineract'
+	image = "${System.getenv('GAR_LOCATION')}-docker.pkg.dev/${System.getenv('PROJECT_ID')}/${System.getenv('REPOSITORY')}/${System.getenv('IMAGE')}".toString()
         tags = [
             "${project.version}",
             "${versionTag}",
@@ -289,8 +290,11 @@ jib {
         user = 'nobody:nogroup'
         environment = [
            'GITHUB_SHA' : "${System.getenv('GITHUB_SHA')}".toString(),
-           'GITHUB_REF' : "${System.getenv('GITHUB_REF')}".toString()
-//         'GAR_LOCATION' : "${System.getenv('GAR_LOCATION')}".toString()
+           'GITHUB_REF' : "${System.getenv('GITHUB_REF')}".toString(),
+           'GAR_LOCATION' : "${System.getenv('GAR_LOCATION')}".toString(),
+	   'PROJECT_ID' : "${System.getenv('PROJECT_ID')}".toString(),
+	   'REPOSITORY' : "${System.getenv('REPOSITORY')}".toString(),
+	   'IMAGE' : "${System.getenv('IMAGE')}".toString()
         ]
     }
 
