--- a/helm/fineract/templates/fineract-server-deployment.yaml
+++ b/helm/fineract/templates/fineract-server-deployment.yaml
@@ -68,18 +68,18 @@ spec:
           requests:
             cpu: "{{ .Values.fineract.resources.requests.cpu }}"
             memory: "{{ .Values.fineract.resources.requests.memory }}"
-        # livenessProbe:
-        #   httpGet:
-        #     path: /healthz
-        #     port: 8080
-        #   initialDelaySeconds: 720
-        #   periodSeconds: 1
-        # readinessProbe:
-        #   httpGet:
-        #     path: /healthz
-        #     port: 8080
-        #   initialDelaySeconds: 360
-        #   periodSeconds: 1
+        livenessProbe:
+          httpGet:
+            path: /actuator/health
+            port: 8080
+          initialDelaySeconds: 720
+          periodSeconds: 1
+        readinessProbe:
+          httpGet:
+            path: /actuator/health
+            port: 8080
+          initialDelaySeconds: 360
+          periodSeconds: 1
         env:
           - name: FINERACT_SERVER_PORT
             value: "{{ .Values.fineract.spec.template.spec.containers.env.FINERACT_SERVER_PORT }}"
