--- a/helm/fineract/values.yaml
+++ b/helm/fineract/values.yaml
@@ -20,10 +20,10 @@ fineract:
             FINERACT_HIKARI_DRIVER_CLASS_NAME: com.mysql.cj.jdbc.Driver
             FINERACT_HIKARI_JDBC_URL: "jdbc:mysql://127.0.0.1:3306/fineract_tenants?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&sessionVariables=time_zone='-00:00'"
             FINERACT_SERVER_PORT: 8080
-            CONTAINER_PORT: 80
+            CONTAINER_PORT: 8080
   preStopScript: 'echo -e "******Fineract is stopping********";'
   ingress:
-    enabled: true
+    enabled: false
     hostname: "api.ekesha.org"
     path: "/fineract-provider"
     #wildcardhostname: "*.kemetstax.org"
