--- a/.github/workflows/deploy_google.yml
+++ b/.github/workflows/deploy_google.yml
@@ -93,7 +93,7 @@ jobs:
         uses: 'google-github-actions/get-gke-credentials@v0.4.0' # google-github-actions/get-gke-credentials@v2
         with:
           cluster_name: '${{ env.GKE_CLUSTER }}'
-          location: '${{ env.GKE_ZONE }}'
+          location: '${{ env.GAR_LOCATION  }}'
 
       # Build the Docker image
       - name: Build the image
