--- a/helm/fineract/values.yaml
+++ b/helm/fineract/values.yaml
@@ -23,8 +23,8 @@ fineract:
             CONTAINER_PORT: 80
   preStopScript: 'echo -e "******Fineract is stopping********";'
   ingress:
-    enabled: false
-    hostname: "api.ekesha.org"
+    enabled: true
+    #hostname: "api.ekesha.org"
     path: "/fineract-provider"
     #wildcardhostname: "*.kemetstax.org"
     annotations:
@@ -42,5 +42,5 @@ fineract:
       cpu: "2000m"
       memory: "8Gi"
     requests:
-      cpu: "200m"
-      memory: "1Gi"
+      cpu: "1000m"
+      memory: "4Gi"
