--- a/helm/fineract/values.yaml
+++ b/helm/fineract/values.yaml
@@ -24,19 +24,19 @@ fineract:
   preStopScript: 'echo -e "******Fineract is stopping********";'
   ingress:
     enabled: true
-    hostname: "api.vuna.io"
+    #hostname: "api.ekesha.org"
     path: "/fineract-provider"
     #wildcardhostname: "*.kemetstax.org"
     annotations:
       # This tells Google Cloud to associate the External Load Balancer with the static IP which we created earlier
       # kubernetes.io/ingress.global-static-ip-name: ekesha-static-ip-d06d1de9
-      networking.gke.io/managed-certificates: ekesha-ssl-cert
+      # networking.gke.io/managed-certificates: ekesha-ssl-cert-d06d1de9
       # kubernetes.io/ingress.class: "nginx"
       # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
       # This tells Google Cloud to create an External Load Balancer to realize this Ingress
       kubernetes.io/ingress.class: "gce"
       #nginx.org/redirect-to-https: "true"
-      kubernetes.io/ingress.allow-http: "true"
+      # kubernetes.io/ingress.allow-http: "true"
   resources:
     limits:
       cpu: "2000m"
