--- a/helm/fineract/values.yaml
+++ b/helm/fineract/values.yaml
@@ -29,7 +29,7 @@ fineract:
     #wildcardhostname: "*.kemetstax.org"
     annotations:
       # This tells Google Cloud to associate the External Load Balancer with the static IP which we created earlier
-      # kubernetes.io/ingress.global-static-ip-name: ekesha-static-ip-d06d1de9
+      kubernetes.io/ingress.global-static-ip-name: ekesha-static-ip-dbfb2e8d
       # networking.gke.io/managed-certificates: ekesha-ssl-cert-d06d1de9
       # kubernetes.io/ingress.class: "nginx"
       # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
