--- a/fineract-provider/config/swagger/fineract-input.yaml.template
+++ b/fineract-provider/config/swagger/fineract-input.yaml.template
@@ -14,7 +14,7 @@ info:
     name: Apache 2.0
     url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
 servers:
-  - url: /fineract-provider/api/v1
+  - url: /fineract-provider/api
   - url: https://demo.fineract.dev/fineract-provider/api/v1
 components:
   securitySchemes:
