--- a/helm/fineract/values.yaml
+++ b/helm/fineract/values.yaml
@@ -24,13 +24,13 @@ fineract:
   preStopScript: 'echo -e "******Fineract is stopping********";'
   ingress:
     enabled: true
-    #hostname: "api.ekesha.org"
+    hostname: "api.vuna.io"
     path: "/fineract-provider"
     #wildcardhostname: "*.kemetstax.org"
     annotations:
       # This tells Google Cloud to associate the External Load Balancer with the static IP which we created earlier
       kubernetes.io/ingress.global-static-ip-name: ekesha-static-ip-dbfb2e8d
-      # networking.gke.io/managed-certificates: ekesha-ssl-cert-d06d1de9
+      networking.gke.io/managed-certificates: fin-managed-ssl-certificate-dbfb2e8d
       # kubernetes.io/ingress.class: "nginx"
       # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
       # This tells Google Cloud to create an External Load Balancer to realize this Ingress
