--- a/helm/fineract/templates/fineract-server-deployment.yaml
+++ b/helm/fineract/templates/fineract-server-deployment.yaml
@@ -71,13 +71,15 @@ spec:
         livenessProbe:
           httpGet:
             path: /fineract-provider/actuator/health/liveness
-            port: 8080
+            port: 443
+            scheme: HTTPS
           initialDelaySeconds: 720
           periodSeconds: 1
         readinessProbe:
           httpGet:
             path: /fineract-provider/actuator/health/readiness
-            port: 8080
+            port: 443
+            scheme: HTTPS
           initialDelaySeconds: 360
           periodSeconds: 1
         env:
