--- a/.github/workflows/oci-deployment.yml
+++ b/.github/workflows/oci-deployment.yml
@@ -2,27 +2,39 @@ name: OCI CI/CD
 
 on:
   push:
-    branches:
-      - master
-    paths:
-      - app/**
-  workflow_dispatch: 
+    branches: ["ekesha-dev"]
+#    paths:
+#      - app/**
+#  workflow_dispatch:
+env:
+  IMAGE: 'ekesha-fineract'
 
 jobs:
   build:
+    name: 'Setup, Build, Publish, and Deploy'
     runs-on: ubuntu-latest
+    environment: 'dev'
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
         with:
-          install: true
+          fetch-depth: 0
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@387ac29b308b003ca37ba93a6cab5eb57c8f5f93 # v4
+        with:
+          java-version: '17'
+          distribution: 'zulu'
+          cache: gradle
+
+#      - name: Set up QEMU
+#        uses: docker/setup-qemu-action@v1
+#
+#      - name: Set up Docker Buildx
+#        id: buildx
+#        uses: docker/setup-buildx-action@v1
+#        with:
+#          install: true
       - name: 'Install OCI CLI'
         run: |
           mkdir ~/.oci
@@ -35,6 +47,7 @@ jobs:
           exec -l $SHELL
           oci setup repair-file-permissions --file /home/runner/.oci/config
           oci setup repair-file-permissions --file /home/runner/.oci/key.pem
+
       - name: 'Install kubectl'
         run: |
           mkdir /tmp/.kube
@@ -43,23 +56,46 @@ jobs:
           mv kubectl /usr/local/bin
           echo "${{ secrets.KUBECONFIG }}" > /tmp/.kube/config
           echo "KUBECONFIG=/tmp/.kube/config" >> $GITHUB_ENV
+
       - name: 'Currently running services'
-        run: kubectl -n free-ns get pods
+        run: kubectl -n paymenthub-ns get pods
+
       - name: Login to Docker registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ${{ secrets.DOCKER_URL }}
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Available platforms
-        run: echo ${{ steps.buildx.outputs.platforms }}
-      - name: Build
-        run: |
-          docker build --push --platform linux/amd64,linux/arm64 -t ${{ secrets.DOCKER_URL }}/${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}/free-kubernetes-nginx:latest app/.
-      - name: Deploy to K8S
-        run: |
-          sed -i 's/<DOCKER_OBJECT_STORAGE_NAMESPACE>/${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}/g' app/k8s-deployment.yaml
-          kubectl -n free-ns apply -f app/k8s-deployment.yaml
-      - name: Restart nginx
-        run: |
-          kubectl -n free-ns rollout restart deployment nginx
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+#      - name: Available platforms
+#        run: echo ${{ steps.buildx.outputs.platforms }}
+
+#      - name: Build
+#        run: |
+#          docker build --push --platform linux/amd64,linux/arm64 -t ${{ secrets.DOCKER_URL }}/${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}/free-kubernetes-nginx:latest app/.
+          # Build the Docker image
+      - name: Build the image
+        run: ./gradlew --no-daemon --console=plain :fineract-provider:clean :fineract-provider:compileJava :fineract-provider:jibDockerBuild -x test -x cucumber
+        env:
+#          GAR_LOCATION: ${{ env.GAR_LOCATION }}
+          GITHUB_SHA: ${{ github.sha }}
+          GITHUB_REF: ${{ github.ref }}
+#          PROJECT_ID: ${{ env.PROJECT_ID }}
+#          REPOSITORY: ${{ env.REPOSITORY }}
+          DOCKER_URL: ${{ secrets.DOCKER_URL }}
+          DOSN: ${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}
+          IMAGE: ${{ env.IMAGE }}
+
+        # Push the Docker image to OCI Container Registry
+      - name: 'Publish'
+        run: |-
+          docker push "${{ secrets.DOCKER_URL }}/${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}/$IMAGE:$GITHUB_SHA"
+          docker push "${{ secrets.DOCKER_URL }}/${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}/$IMAGE:latest"
+
+#      - name: Deploy to K8S
+#        run: |
+#          sed -i 's/<DOCKER_OBJECT_STORAGE_NAMESPACE>/${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}/g' app/k8s-deployment.yaml
+#          kubectl -n free-ns apply -f app/k8s-deployment.yaml
+#      - name: Restart nginx
+#        run: |
+#          kubectl -n free-ns rollout restart deployment nginx
