--- a/.github/workflows/oci-deployment.yml
+++ b/.github/workflows/oci-deployment.yml
@@ -64,8 +64,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ${{ secrets.DOCKER_URL }}
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.OCI_DOCKERHUB_USERNAME }}
+          password: ${{ secrets.OCI_DOCKERHUB_PASSWORD }}
 
 #      - name: Available platforms
 #        run: echo ${{ steps.buildx.outputs.platforms }}
