--- a/.github/workflows/oci-deployment.yml
+++ b/.github/workflows/oci-deployment.yml
@@ -99,3 +99,36 @@ jobs:
 #      - name: Restart nginx
 #        run: |
 #          kubectl -n free-ns rollout restart deployment nginx
+
+          # Deploy the Docker image to the GKE cluster
+      - name: 'Deploy to K8S'
+        run: |
+#          # Fetch secrets from Google Cloud Secret Manager
+#          export FINERACT_DEFAULT_TENANTDB_IDENTIFIER_TEST=${{ FINERACT_DEFAULT_TENANTDB_IDENTIFIER_TEST }}
+#          export FINERACT_DEFAULT_TENANTDB_NAME_TEST=${{ FINERACT_DEFAULT_TENANTDB_NAME_TEST }}
+#          export FINERACT_HIKARI_PASSWORD_TEST=${{ FINERACT_HIKARI_PASSWORD_TEST }}
+#          export FINERACT_HIKARI_USERNAME_TEST=${{ FINERACT_HIKARI_USERNAME_TEST }}
+#          export FINERACT_DEFAULT_TENANTDB_HOSTNAME_TEST=${{ FINERACT_DEFAULT_TENANTDB_HOSTNAME_TEST }}
+              
+          # Add Helm repo if needed (adjust to your Helm chart repository)
+          helm repo add camunda-platform https://helm.camunda.io
+          helm repo add elastic http://helm.elastic.co
+          helm repo add kibana http://helm.elastic.co
+          helm repo add mysql https://charts.bitnami.com/bitnami
+          helm repo add kong https://charts.konghq.com
+          helm repo add keycloak https://codecentric.github.io/helm-charts
+          helm repo add redis https://charts.bitnami.com/bitnami
+               
+          helm repo update
+               
+          helm upgrade -f helm/fineract/values.yaml ph-ee-backend helm/fineract/ \
+          --install --namespace ${{ secrets.NAMESPACE }} \
+          --set fineract.image=${{ secrets.DOCKER_URL }}/${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}/$IMAGE:latest \
+          --set .Values.fineract.spec.template.spec.containers.env.FINERACT_DEFAULT_TENANTDB_IDENTIFIER=${{ secrets.FINERACT_DEFAULT_TENANTDB_IDENTIFIER }} \
+          --set .Values.fineract.spec.template.spec.containers.env.FINERACT_DEFAULT_TENANTDB_NAME=${{ secrets.FINERACT_DEFAULT_TENANTDB_NAME }} \
+          --set .Values.fineract.spec.template.spec.containers.env.FINERACT_DEFAULT_TENANTDB_HOSTNAME=${{ FINERACT_DEFAULT_TENANTDB_HOSTNAME }} \
+          --set .Values.fineract.spec.template.spec.containers.env.FINERACT_DEFAULT_TENANTDB_PWD=${{ secrets.FINERACT_HIKARI_PASSWORD }} \
+          --set .Values.fineract.spec.template.spec.containers.env.FINERACT_HIKARI_PASSWORD=${{ secrets.FINERACT_HIKARI_PASSWORD }} \
+          --set .Values.fineract.spec.template.spec.containers.env.FINERACT_HIKARI_USERNAME=${{ secrets.FINERACT_HIKARI_USERNAME }} \
+          --set .Values.fineract.spec.template.spec.containers.env.FINERACT_ADMIN_USERNAME=${{ secrets.FINERACT_HIKARI_USERNAME }} \
+          --set .Values.fineract.spec.template.spec.containers.env.FINERACT_HIKARI_JDBC_URL=${{ secrets.FINERACT_HIKARI_JDBC_URL }}
