--- a/helm/fineract/templates/fineract-server-deployment.yaml
+++ b/helm/fineract/templates/fineract-server-deployment.yaml
@@ -130,50 +130,50 @@ spec:
           preStop:
             exec:
               command: ['sh', '-c', '{{ .Values.fineract.preStopScript}}']
-      - name: cloud-sql-proxy
-        # It is recommended to use the latest version of the Cloud SQL Auth Proxy
-        # Make sure to update on a regular schedule!
-        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.4
-        args:
-          # If connecting from a VPC-native GKE cluster, you can use the
-          # following flag to have the proxy connect over private IP
-          # - "--private-ip"
-
-          # Enable structured logging with LogEntry format:
-          - "--structured-logs"
-
-          # Replace DB_PORT with the port the proxy should listen on
-          - "--port=3306"
-          - "mali-434814:us-central1:mali-instance-dbfb2e8d"
-        
-        securityContext:
-          # The default Cloud SQL Auth Proxy image runs as the
-          # "nonroot" user and group (uid: 65532) by default.
-          runAsNonRoot: true
-        # You should use resource requests/limits as a best practice to prevent
-        # pods from consuming too many resources and affecting the execution of
-        # other pods. You should adjust the following values based on what your
-        # application needs. For details, see
-        # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
-        resources:
-          requests:
-            # The proxy's memory use scales linearly with the number of active
-            # connections. Fewer open connections will use less memory. Adjust
-            # this value based on your application's requirements.
-            memory: "64Mi"
-            # The proxy's CPU use scales linearly with the amount of IO between
-            # the database and the application. Adjust this value based on your
-            # application's requirements.
-            cpu:    "50m"
-          limits:
-            memory: "128Mi"
-            cpu: "100m"
-        volumeMounts:
-          - name: cloudsql-instance-credentials
-            mountPath: /secrets/cloudsql
-            readOnly: true
-          - name: mysql-initdb
-            mountPath: /docker-entrypoint-initdb.d
+#      - name: cloud-sql-proxy
+#        # It is recommended to use the latest version of the Cloud SQL Auth Proxy
+#        # Make sure to update on a regular schedule!
+#        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.4
+#        args:
+#          # If connecting from a VPC-native GKE cluster, you can use the
+#          # following flag to have the proxy connect over private IP
+#          # - "--private-ip"
+#
+#          # Enable structured logging with LogEntry format:
+#          - "--structured-logs"
+#
+#          # Replace DB_PORT with the port the proxy should listen on
+#          - "--port=3306"
+#          - "mali-434814:us-central1:mali-instance-dbfb2e8d"
+#
+#        securityContext:
+#          # The default Cloud SQL Auth Proxy image runs as the
+#          # "nonroot" user and group (uid: 65532) by default.
+#          runAsNonRoot: true
+#        # You should use resource requests/limits as a best practice to prevent
+#        # pods from consuming too many resources and affecting the execution of
+#        # other pods. You should adjust the following values based on what your
+#        # application needs. For details, see
+#        # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
+#        resources:
+#          requests:
+#            # The proxy's memory use scales linearly with the number of active
+#            # connections. Fewer open connections will use less memory. Adjust
+#            # this value based on your application's requirements.
+#            memory: "64Mi"
+#            # The proxy's CPU use scales linearly with the amount of IO between
+#            # the database and the application. Adjust this value based on your
+#            # application's requirements.
+#            cpu:    "50m"
+#          limits:
+#            memory: "128Mi"
+#            cpu: "100m"
+#        volumeMounts:
+#          - name: cloudsql-instance-credentials
+#            mountPath: /secrets/cloudsql
+#            readOnly: true
+#          - name: mysql-initdb
+#            mountPath: /docker-entrypoint-initdb.d
       volumes:
         - name: cloudsql-instance-credentials
           secret:
@@ -213,8 +213,8 @@ metadata:
   name: fineract-tenants-db-secret
 type: Opaque
 data:
-  username: "YWRtaW5fdXNlcg=="
-  password: "RTRrZXNoNA=="
+  username: "cm9vdA=="
+  password: "RjFuMzdAY3RWdW40JA=="
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -231,14 +231,14 @@ data:
     GRANT ALL ON *.* TO 'root'@'%';
     GRANT ALL PRIVILEGES ON `fineract_tenants`.* TO 'mifos';
     GRANT ALL PRIVILEGES ON `fineract_default`.* TO 'mifos';
----
-apiVersion: networking.gke.io/v1
-kind: ManagedCertificate
-metadata:
-  name: fin-managed-ssl-certificate-dbfb2e8d
-#  namespace: paymenthub-back-end
-spec:
- domains:
-  - api.vuna.io
+#---
+#apiVersion: networking.gke.io/v1
+#kind: ManagedCertificate
+#metadata:
+#  name: fin-managed-ssl-certificate-dbfb2e8d
+##  namespace: paymenthub-back-end
+#spec:
+# domains:
+#  - api.vuna.io
     
 {{- end }}
