--- a/helm/fineract/values.yaml
+++ b/helm/fineract/values.yaml
@@ -31,7 +31,7 @@ fineract:
       # This tells Google Cloud to associate the External Load Balancer with the static IP which we created earlier
 #      kubernetes.io/ingress.global-static-ip-name: ekesha-static-ip-dbfb2e8d
 #      networking.gke.io/managed-certificates: fin-managed-ssl-certificate-dbfb2e8d
-       kubernetes.io/ingress.class: "nginx"
+      ingressClassName: "nginx"
       # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
       # This tells Google Cloud to create an External Load Balancer to realize this Ingress
 #      kubernetes.io/ingress.class: "gce"
