fix: changed srv from clusterIP to NodePort

--- a/helm/fineract/templates/fineract-server-deployment.yaml
+++ b/helm/fineract/templates/fineract-server-deployment.yaml
@@ -23,7 +23,7 @@ metadata:
   labels:
     app: fineract-server
   name: fineract-server
-  annotations:
+#  annotations:
 #    cloud.google.com/neg: '{"ingress": true}'
 spec:
   ports:
