--- a/fineract-provider/src/main/resources/application.properties
+++ b/fineract-provider/src/main/resources/application.properties
@@ -408,7 +408,7 @@ springdoc.swagger-ui.display-query-params=true
 springdoc.swagger-ui.url=/fineract.json
 springdoc.packagesToScan=org.apache.fineract
 springdoc.pathsToMatch=/api/**
-springdoc.use-management-port=${SPRINGDOC_USE_MANAGEMENT_PORT:false}
+springdoc.use-management-port=${SPRINGDOC_USE_MANAGEMENT_PORT:true}
 springdoc.show-actuator=${SPRINGDOC_SHOW_ACTUATOR:false}
 
 spring.web.resources.static-locations=classpath:/static/
