--- a/fineract-provider/src/main/resources/application.properties
+++ b/fineract-provider/src/main/resources/application.properties
@@ -402,13 +402,13 @@ spring.liquibase.parameters.fineract.tenant.read-only-parameters=${fineract.tena
 spring.liquibase.parameters.fineract.tenant.read-only-name=${fineract.tenant.read-only-name}
 
 springdoc.api-docs.path=${SPRINGDOC_API_DOCS_PATH:/api-docs}
-springdoc.api-docs.enabled=${SPRINGDOC_API_DOCS_ENABLED:true}
-springdoc.swagger-ui.enabled=${SPRINGDOC_SWAGGER_UI_ENABLED:true}
+springdoc.api-docs.enabled=${SPRINGDOC_API_DOCS_ENABLED:false}
+springdoc.swagger-ui.enabled=${SPRINGDOC_SWAGGER_UI_ENABLED:false}
 springdoc.swagger-ui.display-query-params=true
 springdoc.swagger-ui.url=/fineract.json
 springdoc.packagesToScan=org.apache.fineract
 springdoc.pathsToMatch=/api/**
-springdoc.use-management-port=${SPRINGDOC_USE_MANAGEMENT_PORT:true}
+springdoc.use-management-port=${SPRINGDOC_USE_MANAGEMENT_PORT:false}
 springdoc.show-actuator=${SPRINGDOC_SHOW_ACTUATOR:false}
 
 spring.web.resources.static-locations=classpath:/static/
