fix: tcp url issue

--- a/fineract-provider/src/main/resources/application.properties
+++ b/fineract-provider/src/main/resources/application.properties
@@ -278,6 +278,7 @@ fineract.sql-validation.profiles[2].enabled=true
 logging.pattern.console=${CONSOLE_LOG_PATTERN:%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) %clr(${PID:- }){magenta} %clr(%replace([%X{correlationId}]){'\\[\\]', ''}) %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}}
 logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 
+management.server.port=${server.port}
 management.health.jms.enabled=${FINERACT_MANAGEMENT_HEALTH_JMS_ENABLED:false}
 
 # FINERACT 1296
@@ -402,8 +403,8 @@ spring.liquibase.parameters.fineract.tenant.read-only-parameters=${fineract.tena
 spring.liquibase.parameters.fineract.tenant.read-only-name=${fineract.tenant.read-only-name}
 
 springdoc.api-docs.path=${SPRINGDOC_API_DOCS_PATH:/api-docs}
-springdoc.api-docs.enabled=${SPRINGDOC_API_DOCS_ENABLED:false}
-springdoc.swagger-ui.enabled=${SPRINGDOC_SWAGGER_UI_ENABLED:false}
+springdoc.api-docs.enabled=${SPRINGDOC_API_DOCS_ENABLED:true}
+springdoc.swagger-ui.enabled=${SPRINGDOC_SWAGGER_UI_ENABLED:true}
 springdoc.swagger-ui.display-query-params=true
 springdoc.swagger-ui.url=/fineract.json
 springdoc.packagesToScan=org.apache.fineract
