--- a/helm/fineract/values.yaml
+++ b/helm/fineract/values.yaml
@@ -11,14 +11,14 @@ fineract:
           env:
             FINERACT_DEFAULT_TENANTDB_IDENTIFIER: ""
             FINERACT_DEFAULT_TENANTDB_NAME: ""
-            FINERACT_DEFAULT_TENANTDB_HOSTNAME: "10.0.1.207"
+            FINERACT_DEFAULT_TENANTDB_HOSTNAME: "paymenthub-mysql-db-system"
             FINERACT_DEFAULT_TENANTDB_PORT: 3306
             FINERACT_HIKARI_PASSWORD: ""
             FINERACT_DEFAULT_TENANTDB_PWD: ""
             FINERACT_HIKARI_USERNAME: ""
             FINERACT_ADMIN_USERNAME: ""
             FINERACT_HIKARI_DRIVER_CLASS_NAME: com.mysql.cj.jdbc.Driver
-            FINERACT_HIKARI_JDBC_URL: "jdbc:mysql://10.0.1.207:3306/fineract_tenants?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&sessionVariables=time_zone='-00:00'"
+            FINERACT_HIKARI_JDBC_URL: "jdbc:mysql://paymenthub-mysql-db-system:3306/fineract_tenants?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&sessionVariables=time_zone='-00:00'"
             FINERACT_SERVER_PORT: 8080
             CONTAINER_PORT: 443
   preStopScript: 'echo -e "******Fineract is stopping********";'
