--- a/helm/fineract/values.yaml
+++ b/helm/fineract/values.yaml
@@ -19,8 +19,8 @@ fineract:
             FINERACT_ADMIN_USERNAME: ""
             FINERACT_HIKARI_DRIVER_CLASS_NAME: com.mysql.cj.jdbc.Driver
             FINERACT_HIKARI_JDBC_URL: "jdbc:mysql://paymenthub-mysql-db-system:3306/fineract_tenants?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&sessionVariables=time_zone='-00:00'"
-            FINERACT_SERVER_PORT: "8080"
-            CONTAINER_PORT: "443"
+            FINERACT_SERVER_PORT: 8080
+            CONTAINER_PORT: 443
   preStopScript: 'echo -e "******Fineract is stopping********";'
   ingress:
     enabled: false
