--- a/helm/fineract/templates/fineract-server-deployment.yaml
+++ b/helm/fineract/templates/fineract-server-deployment.yaml
@@ -20,20 +20,20 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: fineract-server
-  name: fineract-server
+#  labels:
+#    app: fineract-server
+  name: fineract-server-srv
 #  annotations:
 #    cloud.google.com/neg: '{"ingress": true}'
 spec:
   ports:
     - name: 443-8080
       protocol: TCP
-      port: {{ .Values.fineract.spec.template.spec.containers.env.CONTAINER_PORT }}
-      targetPort: {{ .Values.fineract.spec.template.spec.containers.env.FINERACT_SERVER_PORT }}
+      port: 443
+      targetPort: 8080
   selector:
     app: fineract-server
-    tier: backend
+#    tier: backend
   type: NodePort
 #  loadBalancerIP: 34.45.178.100
 ---
