fix: deployment manifest

--- a/.github/workflows/oci-deployment.yml
+++ b/.github/workflows/oci-deployment.yml
@@ -99,6 +99,20 @@ jobs:
 #      - name: Restart nginx
 #        run: |
 #          kubectl -n free-ns rollout restart deployment nginx
+      - name: Replace secrets in manifest
+        run: |
+            sed -i 's|<FINERACT_SERVER_PORT>|'"${{ secrets.FINERACT_SERVER_PORT }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+            sed -i 's|<FINERACT_NODE_ID>|'"${{ secrets.FINERACT_NODE_ID }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+            sed -i 's|<FINERACT_HIKARI_DRIVER_CLASS_NAME>|'"${{ secrets.FINERACT_HIKARI_DRIVER_CLASS_NAME }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+            sed -i 's|<FINERACT_HIKARI_JDBC_URL>|'"${{ secrets.FINERACT_HIKARI_JDBC_URL }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+            sed -i 's|<FINERACT_HIKARI_USERNAME>|'"${{ secrets.FINERACT_HIKARI_USERNAME }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+            sed -i 's|<FINERACT_HIKARI_PASSWORD>|'"${{ secrets.FINERACT_HIKARI_PASSWORD }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+            sed -i 's|<FINERACT_DEFAULT_TENANTDB_HOSTNAME>|'"${{ secrets.FINERACT_DEFAULT_TENANTDB_HOSTNAME }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+            sed -i 's|<FINERACT_DEFAULT_TENANTDB_PORT>|'"${{ secrets.FINERACT_DEFAULT_TENANTDB_PORT }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+            sed -i 's|<FINERACT_DEFAULT_TENANTDB_IDENTIFIER>|'"${{ secrets.FINERACT_DEFAULT_TENANTDB_IDENTIFIER }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+            sed -i 's|<FINERACT_DEFAULT_TENANTDB_NAME>|'"${{ secrets.FINERACT_DEFAULT_TENANTDB_NAME }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+            sed -i 's|<FINERACT_DEFAULT_TENANTDB_UID>|'"${{ secrets.FINERACT_HIKARI_USERNAME }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+            sed -i 's|<FINERACT_DEFAULT_TENANTDB_PWD>|'"${{ secrets.FINERACT_HIKARI_PASSWORD }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
 
         # Deploy the Docker image to the GKE cluster
       - name: 'Deploy to K8S'
@@ -115,10 +129,10 @@ jobs:
                
           helm upgrade -f helm/fineract/values.yaml ph-ee-backend helm/fineract/ \
           --install --namespace ${{ secrets.NAMESPACE }} \
-          --set fineract.image=${{ secrets.DOCKER_URL }}/${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}/$IMAGE:latest \
-          --set fineract.spec.template.spec.containers.env.FINERACT_DEFAULT_TENANTDB_IDENTIFIER=${{ secrets.FINERACT_DEFAULT_TENANTDB_IDENTIFIER }} \
-          --set fineract.spec.template.spec.containers.env.FINERACT_DEFAULT_TENANTDB_NAME=${{ secrets.FINERACT_DEFAULT_TENANTDB_NAME }} \
-          --set fineract.spec.template.spec.containers.env.FINERACT_DEFAULT_TENANTDB_PWD=${{ secrets.FINERACT_HIKARI_PASSWORD }} \
-          --set fineract.spec.template.spec.containers.env.FINERACT_HIKARI_PASSWORD=${{ secrets.FINERACT_HIKARI_PASSWORD }} \
-          --set fineract.spec.template.spec.containers.env.FINERACT_HIKARI_USERNAME=${{ secrets.FINERACT_HIKARI_USERNAME }} \
-          --set fineract.spec.template.spec.containers.env.FINERACT_ADMIN_USERNAME=${{ secrets.FINERACT_HIKARI_USERNAME }}
+          --set fineract.image=${{ secrets.DOCKER_URL }}/${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}/$IMAGE:latest
+#          --set fineract.spec.template.spec.containers.env.FINERACT_DEFAULT_TENANTDB_IDENTIFIER=${{ secrets.FINERACT_DEFAULT_TENANTDB_IDENTIFIER }} \
+#          --set fineract.spec.template.spec.containers.env.FINERACT_DEFAULT_TENANTDB_NAME=${{ secrets.FINERACT_DEFAULT_TENANTDB_NAME }} \
+#          --set fineract.spec.template.spec.containers.env.FINERACT_DEFAULT_TENANTDB_PWD=${{ secrets.FINERACT_HIKARI_PASSWORD }} \
+#          --set fineract.spec.template.spec.containers.env.FINERACT_HIKARI_PASSWORD=${{ secrets.FINERACT_HIKARI_PASSWORD }} \
+#          --set fineract.spec.template.spec.containers.env.FINERACT_HIKARI_USERNAME=${{ secrets.FINERACT_HIKARI_USERNAME }} \
+#          --set fineract.spec.template.spec.containers.env.FINERACT_ADMIN_USERNAME=${{ secrets.FINERACT_HIKARI_USERNAME }}
